examples/invalid/57_double_nan_is_not_literal.lane
module Examples.Invalid.DoubleNanIsNotLiteral

pub let bad : Double = nan
